[gd_scene load_steps=42 format=3 uid="uid://boei71vfhjuuv"]

[ext_resource type="Texture2D" uid="uid://csc0k8fhw6w2c" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f0.png" id="1_f5hch"]
[ext_resource type="Script" path="res://scenes/characters/enemies/flying_creature.gd" id="1_x24nq"]
[ext_resource type="Texture2D" uid="uid://bqnkvdowh7t2s" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f1.png" id="2_3lg14"]
[ext_resource type="PackedScene" uid="uid://xssmyypwrmkm" path="res://scenes/components/health/health_component.tscn" id="2_k18a4"]
[ext_resource type="Texture2D" uid="uid://syonvimthixf" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f2.png" id="3_0kp5j"]
[ext_resource type="Texture2D" uid="uid://c7omftq2y6576" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f3.png" id="4_wtt3m"]
[ext_resource type="Script" path="res://scenes/characters/enemies/FlyingCreatureFSM.gd" id="7_ea0x8"]
[ext_resource type="Texture2D" uid="uid://cn2pnl0e026nq" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f0.png" id="7_ku2vy"]
[ext_resource type="Script" path="res://scenes/components/hurtbox/hurtbox.gd" id="8_1ggxi"]
[ext_resource type="Texture2D" uid="uid://cvetj5oojyjq7" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f1.png" id="8_s8p6f"]
[ext_resource type="PackedScene" uid="uid://chnpmqtact2p0" path="res://scenes/components/hitbox/hitbox.tscn" id="9_u5gp1"]
[ext_resource type="Texture2D" uid="uid://dx86uhbnsk0ro" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f2.png" id="9_uqlmg"]
[ext_resource type="Texture2D" uid="uid://coquqtwmo2mwv" path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f3.png" id="10_2d8ot"]
[ext_resource type="AudioStream" uid="uid://vfs1kvwwgin5" path="res://assets/sound effects/minifantasy_dungeon_sound_effects/18_orc_charge.wav" id="11_1jvbi"]
[ext_resource type="PackedScene" uid="uid://cfiedybmpr18s" path="res://scenes/components/movement/path_find_component.tscn" id="11_lj2rg"]
[ext_resource type="PackedScene" uid="uid://b4asi3l2vysek" path="res://scenes/components/movement/velocity_component.tscn" id="12_6a821"]
[ext_resource type="PackedScene" uid="uid://facia08iryr6" path="res://scenes/components/FSM/FSM.tscn" id="12_qfgb3"]
[ext_resource type="AudioStream" uid="uid://dlr5j7sg3x2oa" path="res://assets/sound effects/Hit damage 1.wav" id="16_kgx5s"]
[ext_resource type="PackedScene" uid="uid://ch3kboaqnb0lu" path="res://scenes/components/drops/drop_component.tscn" id="17_gjr0d"]
[ext_resource type="PackedScene" uid="uid://crdrjk2vf8f62" path="res://scenes/pickup items/heart/heart.tscn" id="18_uesi1"]
[ext_resource type="Script" path="res://scenes/components/drops/drop_data.gd" id="19_3g2gj"]
[ext_resource type="AudioStream" uid="uid://cgdc5e6tohcjw" path="res://assets/sound effects/Bubble 1.wav" id="19_tgdfr"]
[ext_resource type="PackedScene" uid="uid://dnulr8v784cu" path="res://scenes/pickup items/coin/coin.tscn" id="20_dfo34"]
[ext_resource type="AudioStream" uid="uid://b41hsjygwnjqt" path="res://assets/sound effects/minifantasy_dungeon_sound_effects/damage_sound_effects/21_orc_damage_1.wav" id="22_6x6p5"]
[ext_resource type="AudioStream" uid="uid://dcf4q5utk4lbk" path="res://assets/sound effects/minifantasy_dungeon_sound_effects/damage_sound_effects/21_orc_damage_2.wav" id="23_v4qmd"]
[ext_resource type="AudioStream" uid="uid://debyfkeylaybu" path="res://assets/sound effects/minifantasy_dungeon_sound_effects/damage_sound_effects/21_orc_damage_3.wav" id="24_n22je"]
[ext_resource type="PackedScene" uid="uid://dg0uq7gs8ydmf" path="res://scenes/components/damage/damage_component.tscn" id="25_twekk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j5pq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_f5hch")
}, {
"duration": 1.0,
"texture": ExtResource("2_3lg14")
}, {
"duration": 1.0,
"texture": ExtResource("3_0kp5j")
}, {
"duration": 1.0,
"texture": ExtResource("4_wtt3m")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_s1pck"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ku2vy")
}, {
"duration": 1.0,
"texture": ExtResource("8_s8p6f")
}, {
"duration": 1.0,
"texture": ExtResource("9_uqlmg")
}, {
"duration": 1.0,
"texture": ExtResource("10_2d8ot")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_27tcg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:collision_mask")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ChargeUpSoundEffect:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_egku0"]
resource_name = "died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:collision_mask")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Explosion:animation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"explosion"]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("DropComponent")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_calculate_drops"
}]
}

[sub_resource type="Animation" id="Animation_fj3ul"]
resource_name = "fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6texf"]
resource_name = "hurt"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_play_random_damage_sound"
}, {
"args": [],
"method": &"_exit_hurt"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:collision_mask")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 9]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bsaqg"]
resource_name = "swoop_charge_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ChargeUpSoundEffect:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(10, 10, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(10, 10, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckv6c"]
_data = {
"RESET": SubResource("Animation_27tcg"),
"died": SubResource("Animation_egku0"),
"fly": SubResource("Animation_fj3ul"),
"hurt": SubResource("Animation_6texf"),
"swoop_charge_up": SubResource("Animation_bsaqg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_82gia"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_nbr3m"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xtk6i"]
radius = 3.0

[sub_resource type="Resource" id="Resource_pfeky"]
script = ExtResource("19_3g2gj")
item = ExtResource("18_uesi1")
drop_chance = 0.4

[sub_resource type="Resource" id="Resource_t7biw"]
script = ExtResource("19_3g2gj")
item = ExtResource("20_dfo34")
drop_chance = 0.75

[sub_resource type="Resource" id="Resource_btu33"]
script = ExtResource("19_3g2gj")
item = ExtResource("20_dfo34")
drop_chance = 0.5

[node name="Flying Creature" type="CharacterBody2D" node_paths=PackedStringArray("animated_sprite", "path_find_component", "velocity_component", "health_component", "ray_cast", "FSM")]
z_index = 1
collision_layer = 8
collision_mask = 9
script = ExtResource("1_x24nq")
animated_sprite = NodePath("AnimatedSprite2D")
path_find_component = NodePath("PathFindComponent")
velocity_component = NodePath("VelocityComponent")
health_component = NodePath("HealthComponent")
ray_cast = NodePath("RayCast2D")
FSM = NodePath("FlyingCreatureFSM")

[node name="ChargeUpSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_1jvbi")
volume_db = -17.0
max_distance = 1500.0
attenuation = 5.0
bus = &"Sound Effects"

[node name="HealthComponent" parent="." instance=ExtResource("2_k18a4")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_j5pq5")
animation = &"fly"

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_s1pck")
animation = &"explosion"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ckv6c")
}

[node name="FlyingCreatureFSM" parent="." instance=ExtResource("12_qfgb3")]
script = ExtResource("7_ea0x8")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 2
script = ExtResource("8_1ggxi")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_82gia")

[node name="Hitbox" parent="." node_paths=PackedStringArray("damage_component") instance=ExtResource("9_u5gp1")]
collision_layer = 4
collision_mask = 2
damage_component = NodePath("../DamageComponent")
stream = ExtResource("16_kgx5s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_nbr3m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xtk6i")

[node name="PathFindComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("11_lj2rg")]
velocity_component = NodePath("../VelocityComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("12_6a821")]
max_speed = 50.0
acceleration_coeff = 25.0
FRICTION = 0.01

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
collision_mask = 2

[node name="SwoopCharge" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RaycastRecharge" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DropComponent" parent="." instance=ExtResource("17_gjr0d")]
stream = ExtResource("19_tgdfr")
dropable_items = Array[ExtResource("19_3g2gj")]([SubResource("Resource_pfeky"), SubResource("Resource_t7biw"), SubResource("Resource_btu33")])

[node name="Damage1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_6x6p5")
volume_db = -15.0
max_distance = 600.0
attenuation = 4.0
bus = &"Sound Effects"

[node name="Damage2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_v4qmd")
volume_db = -15.0
max_distance = 600.0
attenuation = 4.0
bus = &"Sound Effects"

[node name="Damage3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_n22je")
volume_db = -15.0
max_distance = 600.0
attenuation = 4.0
bus = &"Sound Effects"

[node name="DamageComponent" parent="." instance=ExtResource("25_twekk")]

[connection signal="timeout" from="SwoopCharge" to="." method="_on_swoop_charge_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
[connection signal="timeout" from="RaycastRecharge" to="." method="_on_raycast_recharge_timeout"]
